# chaudhary_replication

./: .gitignore  README.md  plot_scaling.py  pyproject.toml  run.py  run_all.sh  setup.sh  shim.py
original_code/: README.md  probe_eval.ipynb
original_code/scripts/: analyze_probe.py  generate_vectors.py
original_code/src/: probe_analysis.py  utils.py  vector_generation.py  visualization.py
original_code/stages_oversight_folder/: gemma3-1bresults.tsv  gemma3-4bresults.tsv  gemma30.27b.tsv  phi34kminiresults(3.8billionparameters).tsv  qwen(0.5B)_results(4.44.2).tsv  qwen(1.5B)_(4.44.2)results.tsv  qwen(3b)_results (4.44.2).tsv  stages_oversight_gemma-3-12b-it_results.tsv  stages_oversight_gemma-3-27b-it_results.tsv  stages_oversight_phi-3-medium-4k-instruct_results.tsv  stages_oversight_qwen2.5-32b_results.tsv  stages_oversight_qwen2.5-7b_results(1).tsv
original_code/visualization/Olmo_checkpoints/: COMPLETION_SUMMARY.md  README.md
original_code/visualization/layers/: layer_absolute.py  layer_highest.py
original_code/visualization/models/: GPT_results.py  extract_kds_data.py  model_absolute.py  model_absolute_linear.py  model_highest.py  qwen_absolute.py  stages_oversight_kds.py  stages_oversight_kds_average.py  stages_oversight_kds_matplotlib.py  stages_oversight_kds_standalone.html  stages_oversight_kds_static.py
results/: results.csv
results/Qwen3.5-0.8B/probe_scores/: probe_stats_layer1.csv  probe_stats_layer10.csv  probe_stats_layer11.csv  probe_stats_layer12.csv  probe_stats_layer13.csv  probe_stats_layer14.csv  probe_stats_layer15.csv  (+16 more)
(+539 files in other folders)
